# rune_old_2

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  TODO.md  design.md  generate_projects_win.bat  premake5.lua  vcpkg.json
AssetLib/: CMakeLists.txt  Dependencies.cmake
AssetLib/include/rune/assetlib/: assetlib.hpp
AssetLib/include/rune/assetlib/mesh/: static_mesh.hpp
AssetLib/src/: assetlib.cpp  main.cpp
AssetLib/src/mesh/: static_mesh.cpp
Rune/: CMakeLists.txt  Dependencies.cmake  premake5.lua
Rune/RHI/: CMakeLists.txt  Dependencies.cmake
Rune/RHI/include/rune/rhi/: device.hpp  enums.hpp  resources.hpp  shader_compilation.hpp  structs.hpp
Rune/RHI/src/rune/rhi/: shader_compilation.cpp
Rune/RHI/src/vulkan/: device_vk.cpp  device_vk.hpp  pipeline_library_vk.cpp  pipeline_library_vk.hpp  resources_vk.cpp  resources_vk.hpp  shader_compilation_vk.cpp  shader_compilation_vk.hpp  type_conversions_vk.cpp  type_conversions_vk.hpp
Rune/include/rune/: common.hpp  entry_point.hpp  rune.hpp
Rune/include/rune/audio/: audio.hpp
Rune/include/rune/core/: app.hpp  config.hpp  engine.hpp  system.hpp  system_logging.hpp
Rune/include/rune/debug/: assert.hpp  log.hpp
Rune/include/rune/events/: events.hpp  system_events.hpp
Rune/include/rune/graphics/: graphics.hpp  renderer.hpp  vertices.hpp
Rune/include/rune/graphics/renderer/: material.hpp  renderer.hpp  static_mesh.hpp  texture.hpp  vertices.hpp
Rune/include/rune/io/: io.hpp
Rune/include/rune/platform/: input_enums.hpp  platform.hpp  system_platform.hpp  system_platform_glfw.hpp
Rune/include/rune/rendering/: material.hpp  renderer_resource.hpp  rhi.hpp  static_mesh.hpp  system_renderer.hpp  texture.hpp
Rune/include/rune/rendering/rhi/: buffer.hpp  command_list.hpp  common.hpp  device.hpp  fence.hpp  image.hpp  pipeline_state.hpp  render_target.hpp  resource.hpp  shader_compile.hpp  shader_program.hpp  surface.hpp  vertex_input_format.hpp
Rune/include/rune/resources/: handle.hpp  manager.hpp  metadata.hpp  resource.hpp  system_resources.hpp  types.cpp  types.hpp
Rune/include/rune/scenes/: components.hpp  scenes.hpp  system_scene.hpp
Rune/include/rune/scripting/: system_scripting.hpp
Rune/include/rune/ui/: system_imgui.hpp
Rune/include/rune/utility/: enum_class_flags.hpp  ini_reader.hpp  io.hpp  primitives.hpp  primtives.hpp  strings.hpp
Rune/libs/: CMakeLists.txt  mono_LICENSE  versions.txt
Rune/libs/include/: stb_image.h
Rune/libs/include/AudioFile/: AudioFile.h
Rune/libs/include/entt/config/: config.h  version.h
Rune/libs/include/entt/container/: dense_map.hpp  dense_set.hpp  fwd.hpp
Rune/libs/include/entt/core/: algorithm.hpp  any.hpp  attribute.h  compressed_pair.hpp  enum.hpp  family.hpp  fwd.hpp  hashed_string.hpp  ident.hpp  iterator.hpp  memory.hpp  monostate.hpp  tuple.hpp  type_info.hpp  type_traits.hpp  utility.hpp
Rune/libs/include/entt/entity/: component.hpp  entity.hpp  fwd.hpp  group.hpp  handle.hpp  helper.hpp  mixin.hpp  observer.hpp  organizer.hpp  registry.hpp  runtime_view.hpp  snapshot.hpp  sparse_set.hpp  storage.hpp  view.hpp
Rune/libs/include/entt/graph/: adjacency_matrix.hpp  dot.hpp  flow.hpp  fwd.hpp
Rune/libs/include/entt/locator/: locator.hpp
Rune/libs/include/entt/meta/: adl_pointer.hpp  container.hpp  context.hpp  factory.hpp  fwd.hpp  meta.hpp  node.hpp  pointer.hpp  policy.hpp  range.hpp  resolve.hpp  template.hpp  type_traits.hpp  utility.hpp
Rune/libs/include/entt/platform/: android-ndk-r17.hpp
Rune/libs/include/entt/poly/: fwd.hpp  poly.hpp
Rune/libs/include/entt/process/: fwd.hpp  process.hpp  scheduler.hpp
Rune/libs/include/entt/resource/: cache.hpp  fwd.hpp  loader.hpp  resource.hpp
Rune/libs/include/entt/signal/: delegate.hpp  dispatcher.hpp  emitter.hpp  fwd.hpp  (+1 more)
Rune/libs/lib/: mono-2.0-sgen.lib  spdlog.lib
Rune/libs/submodules/: CMakeLists.txt
Rune/src/: common.hpp  common_internal.hpp  entry_point.cpp  internal_common.hpp  library.cpp
Rune/src/audio/: al_common.hpp  audio.cpp
Rune/src/core/: config.cpp  config_internal.hpp  engine.cpp  engine_internal.hpp  platform_detection.hpp  system_logging.cpp
Rune/src/core/internal/: internal_engine.cpp  internal_engine.hpp  internal_logging.cpp  internal_logging.hpp
Rune/src/events/: system_events.cpp
Rune/src/graphics/: graphics.cpp  graphics_resource.hpp  renderer.cpp
Rune/src/graphics/renderer/: material.cpp  renderer.cpp  static_mesh.cpp  texture.cpp
Rune/src/io/: io.cpp
Rune/src/platform/: glfw_platform.cpp  system_platform_glfw.cpp
Rune/src/platform/vk/: buffer_vk.cpp  buffer_vk.hpp  command_list_vk.cpp  command_list_vk.hpp  device_vk.cpp  device_vk.hpp  fence_vk.cpp  fence_vk.hpp  image_vk.cpp  image_vk.hpp  instance_vk.cpp  instance_vk.hpp  pipeline_state_vk.cpp  pipeline_state_vk.hpp  render_target_vk.cpp  render_target_vk.hpp  shader_program_vk.cpp  shader_program_vk.hpp  surface_vk.cpp  surface_vk.hpp  type_conversion_vk.cpp  type_conversions_vk.hpp  vertex_input_format_vk.cpp  vertex_input_format_vk.hpp
Rune/src/rendering/: material.cpp  static_mesh.cpp  system_renderer.cpp  texture.cpp
Rune/src/resources/: factory_funcs.cpp  factory_funcs.hpp  manager.cpp  system_manager.cpp
Rune/src/rune/core/: engine.cpp
Rune/src/rune/debug/: assert_engine.hpp  log.cpp  log_engine.hpp
Rune/src/rune/events/: events.cpp
Rune/src/scenes/: scenes.cpp  system_scene.cpp
Rune/src/scripting/: script_glue.cpp  script_glue.hpp  system_scripting.cpp
Rune/src/ui/: system_imgui.cpp
Rune/src/utility/: ini_reader.cpp  io.cpp  primitives.cpp  strings.cpp  unique_vector.hpp  yaml-conversions.hpp
Sandbox/: CMakeLists.txt  premake5.lua  shader.frag  shader.vert  triangle.frag  triangle.vert  triangle.vert.spv
Sandbox/Sandbox-ScriptProject/: Sandbox-ScriptProject.csproj  Sandbox-ScriptProject.sln
Sandbox/Sandbox-ScriptProject/Properties/: AssemblyInfo.cs
Sandbox/Sandbox-ScriptProject/Source/: Camera.cs
Sandbox/assets/: triangle.frag  triangle.vert
Sandbox/data/: material_01.yaml  registry.yaml  scene_01.yaml
Sandbox/src/: main.cpp
(+103 files in other folders)
